// Copyright 2023 Alexey Lavrenchenko. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// 	http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package personalwebsite.testing.grpcserver;

option go_package = "personal-website-v2/test/pkg/net/grpc/server/testservice;testservice";

service TestService2 {
    rpc Ok(OkRequest2) returns (stream Item) {}

    rpc NotFound(NotFoundRequest2) returns (stream Item) {}

    rpc Panic(PanicRequest2) returns (stream Item) {}
}

message OkRequest2 {
    string data = 1;
}

message NotFoundRequest2 {
    string data = 1;
}

message PanicRequest2 {
    string data = 1;
}

message Item {
    string data = 1;
}
